<resources>
    <string name="app_name">GetTagged</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="tag">Tag</string>
    <string name="not_tagged">Not Tagged</string>
    <string name="enlargeimage">enlargeImage</string>
    <string name="call">call</string>
    <string name="sms">sms</string>
    <string name="rotate">rotate</string>
        <string name="title_activity_main">GetTagged</string>
        <string name="name_here">Name Here</string>
        <string name="user">user</string>
    
</resources>